# TheMind

./: pyproject.toml
themind/: game.py
