[tool.poetry]
name = "themind"
version = "0.1.0"
description = "A set of solutions to the cooperative game TheMind."
authors = ["Or Golan <orgolan@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
